--- a/boltzmann_machine/boltzmann_machine.ipynb
+++ b/boltzmann_machine/boltzmann_machine.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "wltRcST3_P4s"
       },
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 2,
       "metadata": {
         "id": "THsEZRZX_mfS"
       },
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 4,
       "metadata": {
         "id": "uIHNKKzc_oMp"
       },
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 5,
       "metadata": {
         "id": "BfirJQYy_ptl"
       },
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 6,
       "metadata": {
         "id": "Ha6OEG8j_r3o"
       },
@@ -80,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -93,10 +93,7 @@
         {
           "data": {
             "text/html": [
-              "\n",
-              "  <div id=\"df-31caf20c-b3ea-4ae1-ad58-ef4188234a72\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
+              "<div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
               "        vertical-align: middle;\n",
@@ -158,83 +155,7 @@
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-31caf20c-b3ea-4ae1-ad58-ef4188234a72')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-31caf20c-b3ea-4ae1-ad58-ef4188234a72 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-31caf20c-b3ea-4ae1-ad58-ef4188234a72');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
+              "</div>"
             ],
             "text/plain": [
               "   0     1  2          3\n",
@@ -245,7 +166,7 @@
               "4  1  2355  5  978824291"
             ]
           },
-          "execution_count": 67,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -256,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 8,
       "metadata": {
         "id": "0tHlOylc_wA9"
       },
@@ -268,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 9,
       "metadata": {
         "id": "DEAMO3qd_zc6"
       },
@@ -286,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 10,
       "metadata": {
         "id": "FOuugCqT_1l1"
       },
@@ -318,7 +239,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 11,
       "metadata": {
         "id": "_Djh4AhZ_3UE"
       },
@@ -332,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -345,16 +266,16 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "epoch: 1 loss: tensor(0.3635)\n",
-            "epoch: 2 loss: tensor(0.2589)\n",
-            "epoch: 3 loss: tensor(0.2403)\n",
-            "epoch: 4 loss: tensor(0.2482)\n",
-            "epoch: 5 loss: tensor(0.2507)\n",
-            "epoch: 6 loss: tensor(0.2480)\n",
-            "epoch: 7 loss: tensor(0.2494)\n",
-            "epoch: 8 loss: tensor(0.2484)\n",
-            "epoch: 9 loss: tensor(0.2456)\n",
-            "epoch: 10 loss: tensor(0.2486)\n"
+            "epoch: 1 loss: tensor(0.3522)\n",
+            "epoch: 2 loss: tensor(0.2129)\n",
+            "epoch: 3 loss: tensor(0.2439)\n",
+            "epoch: 4 loss: tensor(0.2474)\n",
+            "epoch: 5 loss: tensor(0.2491)\n",
+            "epoch: 6 loss: tensor(0.2466)\n",
+            "epoch: 7 loss: tensor(0.2484)\n",
+            "epoch: 8 loss: tensor(0.2467)\n",
+            "epoch: 9 loss: tensor(0.2488)\n",
+            "epoch: 10 loss: tensor(0.2455)\n"
           ]
         }
       ],
@@ -381,7 +302,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -394,7 +315,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "test loss: tensor(0.2432)\n"
+            "test loss: tensor(0.2450)\n"
           ]
         }
       ],
