managed code docs

--- a/boltzmann_machine/boltzmann_machine.ipynb
+++ b/boltzmann_machine/boltzmann_machine.ipynb
@@ -26,9 +26,9 @@
       },
       "outputs": [],
       "source": [
-        "movies = pd.read_csv('movies.dat', sep='::', header = None, engine='python', encoding='latin-1')\n",
-        "users = pd.read_csv('users.dat', sep='::', header = None, engine='python', encoding='latin-1')\n",
-        "ratings = pd.read_csv('ratings.dat', sep='::', header = None, engine='python', encoding='latin-1')"
+        "movies = pd.read_csv('data/movies.dat', sep='::', header = None, engine='python', encoding='latin-1')\n",
+        "users = pd.read_csv('data/users.dat', sep='::', header = None, engine='python', encoding='latin-1')\n",
+        "ratings = pd.read_csv('data/ratings.dat', sep='::', header = None, engine='python', encoding='latin-1')"
       ]
     },
     {
@@ -39,9 +39,9 @@
       },
       "outputs": [],
       "source": [
-        "training_set = pd.read_csv('u1.base', delimiter = '\\t')\n",
+        "training_set = pd.read_csv('data/u1.base', delimiter = '\\t')\n",
         "training_set = np.array(training_set, dtype = 'int')\n",
-        "test_set = pd.read_csv('u1.test', delimiter = '\\t')\n",
+        "test_set = pd.read_csv('data/u1.test', delimiter = '\\t')\n",
         "test_set = np.array(test_set, dtype = 'int')"
       ]
     },
